// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should hide expenseCount and expenseTotal 1`] = `<div />`;

exports[`should show expenseCount and expenseTotal correctly for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    ₹10.00
  </h1>
</div>
`;

exports[`should show expenseCount and expenseTotal correctly for single expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    ₹15.50
  </h1>
</div>
`;
